[build-system]
requires = [
    "setuptools>=75.8.0",
    "cmake>=3.20",
    "ninja",
    "pygccxml",
    "numpy",
    # Need latest commit for this PR with Mac fixes:
    # https://github.com/ompl/pyplusplus/pull/1
    "pyplusplus @ git+https://github.com/ompl/pyplusplus",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = ["auto"]
build-verbosity = 1

before-all = ".github/workflows/before_all.sh"
before-build = ".github/workflows/before_build.sh"

manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"
