[build-system]
requires = [
    "setuptools>=42",
    "cmake>=3.18",
    "ninja",
    "pygccxml @ git+https://github.com/CastXML/pygccxml",
    "numpy",
    # Need latest commit for this PR with Mac fixes:
    # https://github.com/ompl/pyplusplus/pull/1
    "pyplusplus @ git+https://github.com/ompl/pyplusplus",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = "auto64"
build-verbosity = 1
skip = ""

before-all = ".github/workflows/before_all.sh"
before-build = ".github/workflows/before_build.sh"

manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15"
