[project]
name = "ompl"
dynamic = ["version", "readme"]
description = "The Open Motion Planning Library"
authors=[
    {name = "Ioan A. Șucan", email = "ioan@sucan.ro"},
    {name = "Mark Moll", email = "mark@moll.ai"},
    {name = "Zachary Kingston", email = "zkingston@purdue.edu"},
    {name = "Lydia E. Kavraki", email = "kavraki@rice.edu"}
]
license = "BSD-3-Clause"
requires-python = ">=3.9"
classifiers = [
  "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://ompl.kavrakilab.org"
Documentation = "https://ompl.kavrakilab.org"
Repository = "http://github.com/ompl/ompl"
Issues = "http://github.com/ompl/ompl/issues"

[build-system]
requires = [
    "setuptools>=42",
    "cmake>=3.18",
    "ninja",
    "pygccxml",
    "numpy",
    "pyplusplus",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = "auto64"
build-verbosity = 1
skip = ""

before-all = ".github/workflows/before_all.sh"
before-build = ".github/workflows/before_build.sh"

manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"
